--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
     <!--    todo 2 create service-->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
+<!--    todo 2 create_notification (next TrackerService)-->
     <application
         android:allowBackup="true"
+        android:name=".MyApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
