--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     //Map utils
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 
+    //todo 1 start location update (next TrackerService)
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+
     //Dagger hilt
     implementation "com.google.dagger:hilt-android:2.28.3-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28.3-alpha"
